src/test/dev-workspace/src/main/java/net/labymod/core/laby3d/opengl/error/generated/EXTShaderFramebufferFetchNonCoherent_StringErrorContext.java
package net.labymod.core.laby3d.opengl.error.generated;

import java.util.HashMap;
import java.util.Map;

/* JADX INFO: loaded from: LabyMod-4.jar:net/labymod/core/laby3d/opengl/error/generated/EXTShaderFramebufferFetchNonCoherent_StringErrorContext.class */
public final class EXTShaderFramebufferFetchNonCoherent_StringErrorContext {
    public static Map<String, String> buildMethods() {
        Map<String, String> methods = new HashMap<>();
        methods.put("glFramebufferFetchBarrierEXT()V", "net/labymod/core/laby3d/opengl/error/generated/EXTShaderFramebufferFetchNonCoherentErrorContext");
        return methods;
    }
}
